Create function project

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,8 +3,8 @@ name: Continuous Integration
 env:
   OUTPUT_DIR: publish
   RELEASE_PREFIX: Azure Function Template
-  AZURE_FUNCTIONAPP_NAME: ''
-  PROJECT_NAME: ''
+  AZURE_FUNCTIONAPP_NAME: 'admin-api-gateway'
+  PROJECT_NAME: 'Admin Api Gateway'
 on:
   workflow_dispatch:
   push:
